addons/spreadsheet/static/src/o_spreadsheet/o_spreadsheet_extended.dark.scss
// Force light theme for everything in o-spreadsheet until
// we have the proper scss tool chain to support dark theme properly
// in the library
.o-spreadsheet {
  .o-spreadsheet-topbar {
      background-color: #fff !important;
  }
  .o-filter-menu {
      background-color: #fff !important;
  }
  .o-composer {
      background-color: #fff !important;
  }
  .o-selection-statistic {
      background-color: #fff !important;
  }
  .o_multi_record_selector .badge {
      background-color: #e6dddd !important;
      color: #3c3c3c !important;
  }
  .o_model_field_selector_chain_part {
      background: #f6f7fa !important;
      border-color: #d5dae8 !important;
  }
  input {
      color: #333 !important;
  }
  .o_input {
      color: #3c3c3c !important;
  }
  .o_read_mode .o_tree_editor_condition {
      background: #f6f7fa !important;
      border-color: #d5dae8 !important;
  }
  .o_domain_selector input{
    background-color: #333 !important;
  }
}

